--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:bdd": "cucumber-js"
     },
     "repository": {
         "type": "git",
@@ -58,13 +59,17 @@
         "typeorm": "^0.3.17"
     },
     "devDependencies": {
+        "@cucumber/cucumber": "^10.3.1",
         "@nestjs/cli": "^10.1.16",
         "@nestjs/schematics": "^10.0.2",
         "@nestjs/testing": "^10.3.1",
+        "@types/chai": "^4.3.11",
+        "@types/cucumber": "^7.0.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.11",
         "@types/module-alias": "^2.0.1",
         "@types/node": "^20.3.2",
+        "cucumber-tsflow": "^4.4.1",
         "@typescript-eslint/eslint-plugin": "^5.61.0",
         "eslint": "^8.44.0",
         "eslint-config-prettier": "^8.8.0",
@@ -76,6 +81,7 @@
         "nodemon": "^2.0.22",
         "prettier": "2.8.8",
         "source-map-support": "^0.5.21",
+        "supertest": "^6.3.4",
         "swagger-autogen": "^2.23.4",
         "ts-jest": "^29.1.2",
         "typescript": "^5.1.6"
