--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
         "@nestjs/common": "^10.2.1",
         "@nestjs/config": "^3.0.0",
         "@nestjs/core": "^10.2.1",
+        "@nestjs/microservices": "^10.3.4",
         "@nestjs/mongoose": "^10.0.2",
         "@nestjs/platform-express": "^10.2.1",
         "@nestjs/swagger": "^7.1.8",
         "@nestjs/typeorm": "^10.0.0",
+        "amqp-connection-manager": "^4.1.14",
+        "amqplib": "^0.10.3",
         "axios": "^1.6.5",
         "dayjs": "^1.11.9",
         "dotenv": "^16.3.1",
